--- a/src/app.html
+++ b/src/app.html
@@ -1,41 +1,46 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<!-- Base Configuration -->
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<!-- Favicon -->
-		<link rel="icon" href="%sveltekit.assets%/web/favicon-light.svg" type="image/svg+xml" media="(prefers-color-scheme: light)" />
-		<link rel="icon" href="%sveltekit.assets%/web/favicon-dark.svg" type="image/svg+xml" media="(prefers-color-scheme: dark)" />
-		
-		<!-- SEO -->
-		<meta name="title" content="Nico Iseli | UX-Portfolio">
-		<meta name="description" content="UX Enthusiast with a passion for creating useful and engaging product solutions">
-		<meta name="author" content="Nico Iseli">
-		<meta name="robots" content="index, follow">
-		<meta name="keywords" content="Nico Iseli, Designer, Portfolio, UX, UI, User Research, Zurich, Switzerland">
-		<link rel="canonical" href="https://nicoiseli.com">
-		<script
-			type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Nico Iseli", "jobTitle": "UX Designer", "url": "https://nicoiseli.com", "sameAs": ["https://ch.linkedin.com/in/nico-iseli"], "knowsAbout": ["UX Research", "UX Concept", "UX Design", "UI Design", "UX Testing"], "worksFor": {"@type": "Organization", "name": "finpension AG"}}</script>
-		
-		<!-- Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-MYCCF73M7T"> </script>
-		<script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag("js", new Date()); gtag("config", "G-MYCCF73M7T");</script>
-		
-		<!-- Open Graph Meta Tags -->
-		<meta property="og:title" content="UX Portfolio | Nico Iseli" />
-		<meta property="og:description"
-			content="UX Enthusiast with a passion for creating useful and engaging product solutions" />
-		<meta property="og:image" content="%sveltekit.assets%/web/og-image.jpg" />
-		<meta property="og:url" content="https://nicoiseli.com" />
-		<meta property="og:type" content="website" />
-		<meta property="og:locale" content="en_EN" />
+<head>
+	<!-- Base Configuration -->
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<!-- Dynamic Header -->
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+	<!-- Favicon -->
+	<link rel="icon" href="%sveltekit.assets%/web/favicon-light.svg" type="image/svg+xml"
+		media="(prefers-color-scheme: light)" />
+	<link rel="icon" href="%sveltekit.assets%/web/favicon-dark.svg" type="image/svg+xml"
+		media="(prefers-color-scheme: dark)" />
+
+	<!-- SEO -->
+	<meta name="title" content="Nico Iseli | UX-Portfolio">
+	<meta name="description" content="UX Enthusiast with a passion for creating useful and engaging product solutions">
+	<meta name="author" content="Nico Iseli">
+	<meta name="robots" content="index, follow">
+	<meta name="keywords" content="Nico Iseli, Designer, Portfolio, UX, UI, User Research, Zurich, Switzerland">
+	<link rel="canonical" href="https://nicoiseli.com">
+	<script
+		type="application/ld+json">{"@context": "https://schema.org", "@type": "Person", "name": "Nico Iseli", "jobTitle": "UX Designer", "url": "https://nicoiseli.com", "sameAs": ["https://ch.linkedin.com/in/nico-iseli"], "knowsAbout": ["UX Research", "UX Concept", "UX Design", "UI Design", "UX Testing"], "worksFor": {"@type": "Organization", "name": "finpension AG"}}</script>
+
+	<!-- Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-MYCCF73M7T"> </script>
+	<script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag("js", new Date()); gtag("config", "G-MYCCF73M7T");</script>
+
+	<!-- Open Graph Meta Tags -->
+	<meta property="og:title" content="UX Portfolio | Nico Iseli" />
+	<meta property="og:description"
+		content="UX Enthusiast with a passion for creating useful and engaging product solutions" />
+	<meta property="og:image" content="%sveltekit.assets%/web/og-image.jpg" />
+	<meta property="og:url" content="https://nicoiseli.com" />
+	<meta property="og:type" content="website" />
+	<meta property="og:locale" content="en_EN" />
+
+	<!-- Dynamic Header -->
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
